[tool.poetry]
name = "pytest-sanic"
version = "1.6.1"
description = "a pytest plugin for Sanic"
authors = ["Yun Xu <yunxu1992@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/yunstanford/pytest-sanic"
repository = "https://github.com/yunstanford/pytest-sanic"
documentation = "https://pytest-sanic.readthedocs.io/en/latest/"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.2"
async_generator = "^1.10"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
sanic = "^19.12.2"
pytest-cov = "^2.8.1"

[tool.poetry.plugins."pytest11"]
"sanic" = "pytest_sanic.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
